experiment_output/error_log/nondex-kungyutucheng-my_gradle_plugin.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task228/wd/NonDex-plugin-test/github.com/kungyutucheng/my_gradle_plugin/src/main/java/com/kungyu/jbsplitter/JBSplitterDialogWrapper.java:6: error: package javafx.scene.layout does not exist
import javafx.scene.layout.BorderPane;
                          ^
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 21s
